Added direct route api
