# public/api-docs/swagger.yml
@@ -475,7 +475,45 @@ paths:
         '200':
           description: Successful operation
         '401':
-          description: Unauthenticated
+          description: Unauthorized
+        '403':
+          description: Forbidden
+      security:
+        - bearerAuth: []
+        
+  "/v1/find-direct":
+    get:
+      tags:
+      - Search
+      summary: Find Direct Flights
+      description: Find all direct routes between two cities
+      operationId: find-direct
+      parameters:
+      - name: city_from_id
+        in: query
+        description: ID of the starting city
+        example: 2
+        required: true
+        schema:
+          type: integer
+      - name: city_to_id
+        in: query
+        description: ID of the arrival city
+        example: 3
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/Route"
+        '401':
+          description: Unauthorized
         '403':
           description: Forbidden
       security:
@@ -771,3 +809,18 @@ components:
         type:
           type: string
           enum: [administrator, regular]
+    Route:
+      type: object
+      properties:
+        source_city:
+          type: string
+          example: Paris
+        destination_city:
+          type: string
+          example: Rome
+        price:
+          type: number
+          example: 56.48
+        distance:
+          type: string
+          example: 187 km
